# sage

./: .gitignore  CHANGELOG.md  README.md  cabal.project  flake.nix  fourmolu.yaml  sage-bench.cabal.project  sage.cabal
bench/: Main.hs  Parsers.hs
parsers-indentation/: CHANGELOG.md  parsers-indentation.cabal
parsers-indentation/src/Text/Parser/: Indentation.hs
parsers-indentation/test/: Main.hs
parsers-indentation/test/Test/: Indentation.hs
parsers-sage/: CHANGELOG.md  fourmolu.yaml  parsers-sage.cabal
parsers-sage/src/Text/Parser/: Sage.hs
parsers-sage/src/Text/Parser/Sage/: Instances.hs
sage/: CHANGELOG.md  sage.cabal
sage-bench/: sage-bench.cabal
sage-bench/res/: depth_15.lam
sage-bench/src/: Main.hs  Parsers.hs
sage-parsers-instances/: CHANGELOG.md  sage-parsers-instances.cabal
sage/src/Data/Maybe/: Unboxed.hs
sage/src/Streaming/: Chars.hs
sage/src/Streaming/Chars/: Text.hs
sage/src/Streaming/Chars/ByteString/: Utf8.hs
sage/src/Text/: Sage.hs
sage/src/Text/Sage/: Utf8.hs
sage/test/: Main.hs
sage/test/Test/: Parser.hs  Span.hs
src/Streaming/: Chars.hs  Class.hs
src/Streaming/ByteString/: Strict.hs
src/Streaming/ByteString/Strict/: Utf8.hs
src/Streaming/Chars/: Text.hs
src/Streaming/Chars/ByteString/: Utf8.hs
src/Streaming/Text/: Strict.hs
src/Text/: Sage.hs
src/Text/Sage/: Indentation.hs
test/: Main.hs
test/Test/: Indentation.hs  Parser.hs  Span.hs
