cabal-version:       2.4

name:                sage
version:             0.2
synopsis:            Efficient parser combinators
description:
  Efficient parser combinators for modern Haskell.
  .
  Sage is about 10% faster and twice as memory-efficient as Attoparsec.
  .
  Inspired by Ed Kmett's <https://github.com/ekmett/codex/tree/master/parsnip parsnip> parser,
  which for some reason I thought was called 'parsley'. (I don't care for root vegetable puns)
bug-reports:         https://github.com/lightandlight/sage/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
copyright:           2020-2022 Isaac Elliott
category:            Text
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Streaming.Chars
                     , Streaming.Chars.ByteString.Utf8
                     , Streaming.Chars.Text
                     , Text.Sage
                     , Text.Sage.Indentation
  build-depends:       base >=4.16 && <5
                     , bytestring
                     , containers >=0.6
                     , deepseq >=1.4
                     , mtl
                     , parsers
                     , streaming
                     , text >=2.0
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

benchmark sage-bench
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Parsers
  build-depends:       base >=4.16 && <5
                     , sage
                     , attoparsec
                     , bytestring
                     , criterion
                     , deepseq >=1.4
                     , mmap
                     , parsers
                     , streaming
                     , text
                     , weigh
  hs-source-dirs:      bench
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite sage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Indentation
                     , Test.Parser
                     , Test.Span
  build-depends:       base >=4.16 && <5
                     , sage
                     , containers >=0.6
                     , hedgehog
                     , hspec
                     , hspec-hedgehog
                     , parsers
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
