cabal-version:       2.4

name:                parsers-indentation
version:             0.1
synopsis:            Indentation-sensitive parsers
description:
  Indentation-sensitive parsers, built on top of <https://hackage.haskell.org/package/parsers @parsers@>
bug-reports:         https://github.com/lightandlight/sage/issues
license:             BSD-3-Clause
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
copyright:           2020-2025 Isaac Elliott
category:            Text
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Text.Parser.Indentation
  build-depends:       base >=4.16 && <5
                     , parsers
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages

test-suite parsers-indentation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Indentation
  build-depends:       base
                     , bytestring
                     , hspec
                     , parsers
                     , parsers-indentation
                     , parsers-sage
                     , sage
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages
