cabal-version:       2.4

name:                parsers-sage
version:             0.13
synopsis:            Parsers instances for sage
description:         This package provides instances for the `parsers` package for the `sage` parser.
bug-reports:         https://github.com/lightandlight/sage/issues
license:             BSD-3-Clause
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
copyright:           2020-2022 Isaac Elliott
category:            Text
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Text.Parser.Sage
  build-depends:       base >=4.16 && <5
                     , parsers
                     , sage >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages
