cabal-version:       2.4

name:                sage-bench
version:             0.1
synopsis:            Benchmarks for the sage parser library
description:
  Benchmarks for the sage parser combinator library.
  .
  Used to evaluate and track the performance of the sage parser.
bug-reports:         https://github.com/lightandlight/sage/issues
license:             BSD-3-Clause
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
copyright:           2020-2022 Isaac Elliott
category:            Text
extra-source-files:  CHANGELOG.md

executable sage-bench
  main-is:             Main.hs
  other-modules:       Parsers
  build-depends:       base >=4.16 && <5
                     , sage
                     , attoparsec >=0.14 && <0.15
                     , bytestring
                     , criterion
                     , deepseq
                     , mmap
                     , optparse-applicative >=0.18 && <0.19
                     , parsers >=0.13
                     , parsers-attoparsec
                     , parsers-sage
                     , streaming
                     , text
                     , weigh
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
