cabal-version:       2.4

name:                sage-parsers-instances
version:             0.1
synopsis:            Orphan `parsers` instances for `sage`
description:
  This package provides `parsers` instances for the `sage` parser.
  .
  To use this package without depending on `attoparsec`/`binary`/`parsec` via `parsers`,
  add `constraints: parsers -attoparsec -binary -parsec` to your `cabal.project` file.
bug-reports:         https://github.com/lightandlight/sage/issues
license:             BSD-3-Clause
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
copyright:           2020-2022 Isaac Elliott
category:            Text
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Text.Parser.Sage.Instances
  build-depends:       base >=4.16 && <5
                     , parsers
                     , sage >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages
