cabal-version:       2.4

name:                sage
version:             0.5
synopsis:            Efficient parser combinators
description:
  Efficient parser combinators for modern Haskell.
  .
  Sage is faster and more memory-efficient than Attoparsec, while allowing better error messages.
  .
  Inspired by Ed Kmett's <https://github.com/ekmett/codex/tree/master/parsnip parsnip> parser,
  which for some reason I thought was called 'parsley'. (I don't care for root vegetable puns)
bug-reports:         https://github.com/lightandlight/sage/issues
license:             BSD-3-Clause
author:              Isaac Elliott
maintainer:          hackage@id.ielliott.io
copyright:           2020-2025 Isaac Elliott
category:            Text
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Maybe.Unboxed
                     , Text.Sage
                     , Text.Sage.Utf8
  build-depends:       base >=4.16 && <5
                     , bytestring
                     , containers >=0.6
                     , deepseq >=1.4
                     , text >=2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages

test-suite sage-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Parser
                     , Test.Span
  build-depends:       base
                     , bytestring
                     , sage
                     , containers
                     , hedgehog
                     , hspec
                     , hspec-hedgehog
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -Wunused-packages
